# python-keygen-cli

./: .cursorignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/keygen_cli/: cli.py  config.py
src/keygen_cli/api/: __init__.py  artifacts.py  groups.py  licenses.py  packages.py  policies.py  releases.py
src/keygen_cli/utils/: __init__.py  utils.py
