[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keygen-cli"
version = "0.1.0"
description = "A CLI application interacting with Keygen.sh API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
kgsh = "keygen_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
your_project_name = ["py.typed"]

[tool.ruff]
line-length = 128
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "C", "D"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["keygen_cli"]

[tool.mypy]
strict = true